# NN-Project---Prog3-prueba

./: CMakeLists.txt
autograder/: CMakeLists.txt
include/utec/algebra/: shape.h  tensor_backend.h  tensor_ops.h
include/utec/apps/: PatternClassifier.h
include/utec/io/: dataset_loader.h  model_serializer.h
include/utec/monitoring/: report_exporter.h  training_monitor.h
include/utec/nn/: neural_network.h  nn_activation.h  nn_convolution.h  nn_dense.h  nn_flatten.h  nn_interfaces.h  nn_loss.h  nn_ops.h  nn_pooling.h
tests/epic1/: feature1_eigen_backend_test.cpp  feature2_numeric_ops_test.cpp  feature3_forward_layers_test.cpp  feature4_computational_graph_test.cpp
tests/epic2/: feature1_test.cpp  feature2_test.cpp  feature3_test.cpp  feature4_test.cpp
